相鉄とJRのプラグインを切り替えて両立

--- a/vehicle.ini
+++ b/vehicle.ini
@@ -1,4 +1,8 @@
 BveTs Vehicle 1.00:UTF-8
 
 Parameters = parameters\parameters.ini
-PerformanceCurve = performance\performance.ini
+PerformanceCurve = ..\..\Kazuma\E233\Vehicle\Notch\Notch32_25.txt
+; Ats = ats\DetailManager.dll
+Ats = ats\DetailSwitcher.dll
+; Ats = C:\Users\p4\Documents\BveTs\Scenarios\p4ken\ats\overlay\BveAtsPluginCsharpTemplate\bin\Debug\x86\AtsPlugin.dll
+Sound = sound\sound.ini
