--- a/vehicle.ini
+++ b/vehicle.ini
@@ -2,6 +2,7 @@ BveTs Vehicle 1.00:UTF-8
 
 Parameters = parameters\parameters.ini
 PerformanceCurve = ..\..\Kazuma\E233\Vehicle\Notch\Notch32_25.txt
+Panel = panel\panel.ini
 ; Ats = ats\DetailManager.dll
 Ats = ats\DetailSwitcher.dll
 ; Ats = C:\Users\p4\Documents\BveTs\Scenarios\p4ken\ats\overlay\BveAtsPluginCsharpTemplate\bin\Debug\x86\AtsPlugin.dll
