相鉄ATSの仕様通りに表示する

--- a/panel/panel_square_large.ini
+++ b/panel/panel_square_large.ini
@@ -1,13 +1,13 @@
 BveTs Instrument Panel 2.00
 
 [This]
-Resolution = 2000 
-Left = 0 
-Right = 2000 
-Top = 0 
-Bottom = 1200 
-Center = 1000, 600 
-Origin = 1000, 600 
+Resolution = 1000
+Left = 650
+Right = 1650
+Top = 0
+Bottom = 1500
+Center = 1250, 750
+Origin = 1150, 650
 
 [DigitalNumber]
 DaytimeImage = debug\相鉄_xn.png
@@ -42,7 +42,7 @@ Layer = 1
 TransparentColor = 000000
 
 [DigitalNumber]
-DaytimeImage = debug\ATS動作_xn.png
+DaytimeImage = debug\常用ブレーキ_xn.png
 Location = 1300, 750
 Subject = ats1
 Interval = 128
@@ -55,7 +55,7 @@ Layer = 1
 TransparentColor = 000000
 
 [DigitalNumber]
-DaytimeImage = debug\ブレーキ動作_xn.png
+DaytimeImage = debug\非常ブレーキ_xn.png
 Location = 1350, 750
 Subject = ats5
 Interval = 128
