--- a/vehicle.ini
+++ b/vehicle.ini
@@ -1,4 +1,5 @@
 BveTs Vehicle 1.00:UTF-8
 
 Parameters = parameters\parameters.ini
-PerformanceCurve = performance\performance.ini
+PerformanceCurve = ..\..\Kazuma\E233\Vehicle\Notch\Notch32_25.txt
+Sound = sound\sound.ini
