motor0を追加、音量をかなり下げた

--- a/vehicle.ini
+++ b/vehicle.ini
@@ -3,3 +3,5 @@ BveTs Vehicle 1.00:UTF-8
 Parameters = parameters\parameters.ini
 PerformanceCurve = ..\..\Kazuma\E233\Vehicle\Notch\Notch32_25.txt
 Sound = sound\sound.ini
+MotorNoise = motornoise\motornoise.ini
+
