--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -5,3 +5,6 @@
 1 = ..\..\sound\run\warihata1-trim.wav
 2 = ..\..\sound\run\tsurumigawa2-fast.wav
 3 = ..\..\sound\run\kohoku1-trim.wav
+
+[Motor]
+0 = ..\..\sound\motor\非同期8_反転して両端フェード.wav
