--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -18,3 +18,5 @@
 14 = ..\..\sound\tims\次は、停車、次は、停車.wav
 ; 相鉄
 15 = ..\..\sound\tims\通過、通過.wav
+; 切り替え
+21 = ..\..\sound\ann\hazawa\here-mono-12000Hz-16bit-up3db.wav
