戸閉め連動PIを追加

--- a/panel/panel.ini
+++ b/panel/panel.ini
@@ -221,13 +221,13 @@ Location = 1550, 750
 Subject = ats40
 Interval = 128
 Layer = 3
-[DigitalNumber]
-DaytimeImage = debug\埼京マスク_xn.bmp
-Location = 1550, 750
-Subject = ats246
-Interval = 128
-Layer = 4
-TransparentColor = 000000
+; [DigitalNumber]
+; DaytimeImage = debug\埼京マスク_xn.bmp
+; Location = 1550, 750
+; Subject = ats246
+; Interval = 128
+; Layer = 4
+; TransparentColor = 000000
 
 [DigitalNumber]
 DaytimeImage = debug\定速_xn.png
