相鉄のみ発車合図ブザーを追加

--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -15,7 +15,7 @@
 ; JR
 4 = ..\..\..\Rock_On\Train\JR\Vehicle\373\Sound\Ding.wav ; Rock_On
 ; TIMS, 相鉄
-;13 = EB動作
+13 = ..\..\sound\buzzer\eb\span-dc-down2db-mono.wav
 ; TIMS, 相鉄
 ; 14 = ..\..\sound\tims\次は、停車、次は、停車.wav
 ; TIMS, 相鉄
@@ -23,3 +23,5 @@
 
 ; 切り替え
 21 = ..\..\sound\ann\hazawa\here-mono-12000Hz-16bit-up3db.wav
+; 連絡ブザー
+180 = ..\..\sound\buzzer\conductor\dc-down2db-span.wav
