計器パネルを完成

--- a/panel/panel.ini
+++ b/panel/panel.ini
@@ -1,40 +1,42 @@
 BveTs Instrument Panel 2.00
 
 [This]
+; Resolution = 500 ; ピクセル調整用
 Resolution = 2000
 Left = 0
 Right = 2000
 Top = -200
 Bottom = 1400
 Center = 1000, 600
+; Center = 500, 1000
 Origin = 1000, 500
 
 #
-# 常用ブレーキノッチ
+# 非常ブレーキノッチ
 #
 [DigitalNumber]
 Subject = brake
-Location = 200, 870
-DaytimeImage = meter\brake_trim.png
-Interval = 200
+Location = 206, 840
+DaytimeImage = meter\eb_trim.png
+Interval = 25
 Layer = 4
 #
 # 抑速ノッチ
 #
 [DigitalNumber]
 Subject = ats91
-Location = 206, 830
+Location = 206, 870
 DaytimeImage = meter\hold_trim.png
 Interval = 25
 Layer = 4
 #
-# 非常ブレーキノッチ
+# 常用ブレーキノッチ
 #
 [DigitalNumber]
 Subject = brake
-Location = 206, 800
-DaytimeImage = meter\eb_trim.png
-Interval = 25
+Location = 200, 900
+DaytimeImage = meter\brake_trim.png
+Interval = 200
 Layer = 4
 
 #
@@ -49,31 +51,13 @@ Layer = 4
 #
 # 速度
 #
-; [DigitalNumber]
-; DaytimeImage = meter\myriad.bmp
-; Location = 772, 1050
-; Subject = ats233
-; Interval = 49
-; Layer = 1
-; [DigitalNumber]
-; DaytimeImage = meter\myriad.bmp
-; Location = 736, 1050
-; Subject = ats232
-; Interval = 49
-; Layer = 2
-; [DigitalNumber]
-; DaytimeImage = meter\myriad.bmp
-; Location = 700, 1050
-; Subject = ats231
-; Interval = 49
-; Layer = 3
 [PilotLamp]
 DaytimeImage = meter\speed_base_trim_lanczos.png
-Location = 600, 825
+Location = 350, 830
 Subject = true
 Layer = 4
 [Needle]
-Location = 728, 965
+Location = 478, 970
 DaytimeImage = meter\speed_needle_trim_nearest.bmp
 Subject = ats230
 Origin = 14, 117
@@ -85,6 +69,49 @@ Maximum = 140
 NaturalFreq = 0
 TransparentColor = 51606B
 Layer = 5
+[DigitalNumber]
+DaytimeImage = meter\speed_number_lanczos.png
+Location = 467, 1032
+Subject = ats233
+Interval = 59
+Layer = 6
+[DigitalNumber]
+DaytimeImage = meter\speed_number_lanczos.png
+Location = 423, 1032
+Subject = ats232
+Interval = 59
+Layer = 7
+[DigitalNumber]
+DaytimeImage = meter\speed_number_100_lanczos.png
+Location = 411, 1032
+Subject = ats231
+; Subject = true
+Interval = 59
+Layer = 8
+
+#
+# メーター背景ベース
+#
+[DigitalGauge]
+Color = 51606B
+Radius = 140
+Location = 330, 965
+InitialAngle = -180
+LastAngle = 180
+Minimum = 1
+Maximum = 60
+Subject = true
+Layer = 2
+[DigitalGauge]
+Color = 51606B
+Radius = 140
+Location = 510, 965
+InitialAngle = -180
+LastAngle = 180
+Minimum = 1
+Maximum = 60
+Subject = true
+Layer = 2
 
 #
 # 保安装置
@@ -221,13 +248,13 @@ Location = 1550, 750
 Subject = ats40
 Interval = 128
 Layer = 3
-; [DigitalNumber]
-; DaytimeImage = debug\埼京マスク_xn.bmp
-; Location = 1550, 750
-; Subject = ats246
-; Interval = 128
-; Layer = 4
-; TransparentColor = 000000
+[DigitalNumber]
+DaytimeImage = debug\埼京マスク_xn.bmp
+Location = 1550, 750
+Subject = ats246
+Interval = 128
+Layer = 4
+TransparentColor = 000000
 
 [DigitalNumber]
 DaytimeImage = debug\定速_xn.png
@@ -240,10 +267,10 @@ Layer = 3
 # 最高速度ヒント
 #
 [DigitalNumber]
-DaytimeImage = tims\max_lanczos.png
-Location = 1035, 920
+DaytimeImage = tims\max_readable_lanczos.png
+Location = 970, 915
 Subject = ats246
-Interval = 21
+Interval = 28
 Layer = 6
 
 #
@@ -634,7 +661,7 @@ Layer = 3
 #
 [DigitalGauge]
 Color = 51606B
-Radius = 180
+Radius = 190
 Location = 1100, 920
 InitialAngle = -180
 LastAngle = 180
@@ -644,7 +671,7 @@ Subject = true
 Layer = 2
 [DigitalGauge]
 Color = 51606B
-Radius = 180
+Radius = 190
 Location = 1440, 920
 InitialAngle = -180
 LastAngle = 180
@@ -654,7 +681,7 @@ Subject = true
 Layer = 2
 [DigitalGauge]
 Color = 51606B
-Radius = 180
+Radius = 190
 Location = 1560, 920
 InitialAngle = -180
 LastAngle = 180
