連絡ブザーを追加

--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -9,13 +9,16 @@
 [Motor]
 0 = ..\..\sound\motor\非同期8_反転して両端フェード.wav
 
+[Buzzer]
+Correct = ..\..\sound\buzzer\conductor\dc-down6db-overrun.wav
+
 [Ats]
 ; 相鉄
 2 = ..\..\..\Rock_On\Train\JR\Vehicle\373\Sound\Ding.wav ; Rock_On
 ; JR
 4 = ..\..\..\Rock_On\Train\JR\Vehicle\373\Sound\Ding.wav ; Rock_On
 ; TIMS, 相鉄
-13 = ..\..\sound\buzzer\eb\span-dc-down2db-mono.wav
+13 = ..\..\sound\buzzer\eb\span-dc-down12db-mono.wav
 ; TIMS, 相鉄
 ; 14 = ..\..\sound\tims\次は、停車、次は、停車.wav
 ; TIMS, 相鉄
@@ -24,4 +27,5 @@
 ; 切り替え
 21 = ..\..\sound\ann\hazawa\here-mono-12000Hz-16bit-up3db.wav
 ; 連絡ブザー
-180 = ..\..\sound\buzzer\conductor\dc-down2db-span.wav
+180 = ..\..\sound\buzzer\conductor\dc-down6db-span-48kHz.wav
+181 = ..\..\sound\buzzer\conductor\dc-down6db-span-48kHz.wav
