音量を調整

--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -10,7 +10,7 @@
 0 = ..\..\sound\motor\非同期8_反転して両端フェード.wav
 
 [Buzzer]
-Correct = ..\..\sound\buzzer\conductor\dc-down6db-overrun.wav
+Correct = ..\..\sound\buzzer\conductor\dc-down12db-overrun-short.wav
 
 [Ats]
 ; 相鉄
@@ -27,5 +27,5 @@ Correct = ..\..\sound\buzzer\conductor\dc-down6db-overrun.wav
 ; 切り替え
 21 = ..\..\sound\ann\hazawa\here-mono-12000Hz-16bit-up3db.wav
 ; 連絡ブザー
-180 = ..\..\sound\buzzer\conductor\dc-down6db-span-48kHz.wav
-181 = ..\..\sound\buzzer\conductor\dc-down6db-span-48kHz.wav
+180 = ..\..\sound\buzzer\conductor\dc-down12db-span-48kHz.wav
+181 = ..\..\sound\buzzer\conductor\dc-down12db-span-48kHz.wav
