車両重量を設定

--- a/parameters/parameters.ini
+++ b/parameters/parameters.ini
@@ -5,3 +5,9 @@ BveTs Vehicle Parameters 2.01:UTF-8
 [ConstantSpeedControl]
 Power = 3 ;定速
 Neutral = 2 ;抑速
+
+[Dynamics]
+MotorcarWeight = 33267
+TrailerWeight = 30725
+MotorcarCount = 6
+TrailerCount = 4
