加速度を2.5にした

--- a/parameters/parameters.ini
+++ b/parameters/parameters.ini
@@ -1,6 +1,13 @@
 BveTs Vehicle Parameters 2.01:UTF-8
 
 [OneLeverCab]
+ReverserText = 後,切,前
+BrakeText = 切,B1,B2,B3,B4,B5,B6,B7,B8,非常
+PowerText = 切,P1,P2,P3,P4,P5
+
+[Ecb]
+
+[AirSupplement]
 
 [ConstantSpeedControl]
 Power = 3 ;定速
