--- a/vehicle.ini
+++ b/vehicle.ini
@@ -1,7 +1,7 @@
 BveTs Vehicle 1.00:UTF-8
 
 Parameters = parameters\parameters.ini
-PerformanceCurve = ..\..\Kazuma\E233\Vehicle\Notch\Notch32_25.txt
+PerformanceCurve = performance\performance.ini
 Sound = sound\sound.ini
 MotorNoise = motornoise\motornoise.ini
 Panel = panel\panel.ini
