--- a/performance/performance.ini
+++ b/performance/performance.ini
@@ -2,14 +2,10 @@
 Force = power-force.csv
 MaxForce = power-force.csv
 Current = power-current.csv
-MaxCurrent = power-current.csv
-NoLoadCurrent = power-current.csv
 Params = power-params.csv
 
 [Brake]
-Force = power-force.csv
-MaxForce = power-force.csv
-Current = power-current.csv
-MaxCurrent = power-current.csv
-NoLoadCurrent = power-current.csv
-Params = power-params.csv
+Force = brake-force.csv
+MaxForce = brake-force.csv
+Current = brake-current.csv
+Params = brake-params.csv
