--- a/performance/performance.ini
+++ b/performance/performance.ini
@@ -1,11 +1,12 @@
 [Power]
-Force = power-force.csv
-MaxForce = power-force.csv
-Current = power-current.csv
-Params = power-params.csv
+Force = power\force.csv
+MaxForce = power\force.csv
+Current = power\current.csv
+NoLoadCurrent = power\current0.csv
+Params = power\params.csv
 
 [Brake]
-Force = brake-force.csv
-MaxForce = brake-force.csv
-Current = brake-current.csv
-Params = brake-params.csv
+Force = brake\force.csv
+MaxForce = brake\force.csv
+Current = brake\current.csv
+Params = brake\params.csv
