力行曲線をExcelで生成

--- a/performance/performance.ini
+++ b/performance/performance.ini
@@ -1,9 +1,10 @@
 [Power]
-Force = power\force.csv
-MaxForce = power\force.csv
-Current = power\current.csv
-NoLoadCurrent = power\current0.csv
-Params = power\params.csv
+Force = power\P-f.csv
+MaxForce = power\P-fMax.csv
+Current = power\P-c.csv
+MaxCurrent  = power\P-cMax.csv
+NoLoadCurrent = power\P-cZero.csv
+Params = power\P-Prmtr.csv
 
 [Brake]
 Force = brake\force.csv
