--- a/parameters/parameters.ini
+++ b/parameters/parameters.ini
@@ -18,3 +18,6 @@ MotorcarWeight = 33267
 TrailerWeight = 30725
 MotorcarCount = 6
 TrailerCount = 4
+
+[MainCircuit]
+RegenerationLimit = 0 ;全電気ブレーキ
