参照音源を差し替え

--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -14,9 +14,9 @@ Correct = ..\..\sound\buzzer\conductor\dc-down12db-overrun-short.wav
 
 [Ats]
 ; 相鉄
-2 = ..\..\..\Rock_On\Train\JR\Vehicle\373\Sound\Ding.wav ; Rock_On
+2 = C:\Users\p4\Documents\BveTs\Scenarios\p4ken\Uchibo20\E217r\sound\Ding.wav
 ; JR
-4 = ..\..\..\Rock_On\Train\JR\Vehicle\373\Sound\Ding.wav ; Rock_On
+4 = C:\Users\p4\Documents\BveTs\Scenarios\p4ken\Uchibo20\E217r\sound\Ding.wav
 ; TIMS, 相鉄
 13 = ..\..\sound\buzzer\eb\span-dc-down12db-mono.wav
 ; TIMS, 相鉄
