リリースビルド

--- a/vehicle-sj.ini
+++ b/vehicle-sj.ini
@@ -5,4 +5,4 @@ PerformanceCurve = performance\performance.ini
 Sound = sound\sound.ini
 MotorNoise = motornoise\motornoise.ini
 Panel = panel\panel.ini
-Ats = ats\DetailSwitcher.dll
+Ats = ats\p4ken\x86\DetailSwitcher.dll
