フォルダ階層変更

--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -1,31 +1,31 @@
 ﻿BveTs Vehicle Sound 3.01
 
 [Run]
-0 = ..\..\sound\run\tsurumi2-fast+20db.wav
-2 = ..\..\sound\run\warihata1-trim+16db.wav
-3 = ..\..\sound\run\tsurumigawa2-fast-comp15db50%+12db.wav
-4 = ..\..\sound\run\kohoku1-trim+12db.wav
+0 = .\p4ken\wav\run\tsurumi2-fast+20db.wav
+2 = .\p4ken\wav\run\warihata1-trim+16db.wav
+3 = .\p4ken\wav\run\tsurumigawa2-fast-comp15db50%+12db.wav
+4 = .\p4ken\wav\run\kohoku1-trim+12db.wav
 
 [Motor]
-0 = ..\..\sound\motor\非同期8_反転して両端フェード.wav
+0 = .\p4ken\wav\motor\非同期8_反転して両端フェード.wav
 
 [Buzzer]
-Correct = ..\..\sound\buzzer\conductor\dc-down12db-overrun-short.wav
+Correct = .\p4ken\wav\buzzer\conductor\dc-down12db-overrun-short.wav
 
 [Ats]
 ; 相鉄
-2 = C:\Users\p4\Documents\BveTs\Scenarios\p4ken\Uchibo20\E217r\sound\Ding.wav
+2 = .\Uchibo20\E217r\sound\Ding.wav
 ; JR
-4 = C:\Users\p4\Documents\BveTs\Scenarios\p4ken\Uchibo20\E217r\sound\Ding.wav
+4 = .\Uchibo20\E217r\sound\Ding.wav
 ; TIMS, 相鉄
-13 = ..\..\sound\buzzer\eb\span-dc-down12db-mono.wav
+13 = .\p4ken\wav\buzzer\eb\span-dc-down12db-mono.wav
 ; TIMS, 相鉄
-; 14 = ..\..\sound\tims\次は、停車、次は、停車.wav
+; 14 = .\p4ken\wav\tims\次は、停車、次は、停車.wav
 ; TIMS, 相鉄
-; 15 = ..\..\sound\tims\通過、通過.wav
+; 15 = .\p4ken\wav\tims\通過、通過.wav
 
 ; 切り替え
-21 = ..\..\sound\ann\hazawa\here-mono-12000Hz-16bit-up3db.wav
+21 = .\p4ken\wav\ann\hazawa\here-mono-12000Hz-16bit-up3db.wav
 ; 連絡ブザー
-180 = ..\..\sound\buzzer\conductor\dc-down12db-span-48kHz.wav
-181 = ..\..\sound\buzzer\conductor\dc-down12db-span-48kHz.wav
+180 = .\p4ken\wav\buzzer\conductor\dc-down12db-span-48kHz.wav
+181 = .\p4ken\wav\buzzer\conductor\dc-down12db-span-48kHz.wav
