定速の電制用にブレーキ曲線を設定

--- a/performance/performance.ini
+++ b/performance/performance.ini
@@ -7,7 +7,9 @@ NoLoadCurrent = power\P-cZero.csv
 Params = power\P-Prmtr.csv
 
 [Brake]
-Force = brake\force.csv
-MaxForce = brake\force.csv
-Current = brake\current.csv
-Params = brake\params.csv
+Force = brake\B-f.csv
+MaxForce = brake\B-fMax.csv
+Current = brake\B-c.csv
+MaxCurrent  = brake\B-cMax.csv
+NoLoadCurrent = brake\B-cZero.csv
+Params = brake\B-Prmtr.csv
