車掌PIでホームドア再現

--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -26,6 +26,12 @@ Correct = .\p4ken\wav\buzzer\conductor\dc-down12db-overrun-short.wav
 
 ; 切り替え
 21 = .\p4ken\wav\ann\hazawa\here-mono-12000Hz-16bit-up3db.wav
+
+; ドア閉
+141 = .\p4ken\wav\door\close-trim-mono-8bit-short-stereo-L.wav
+143 = .\p4ken\wav\door\close-trim-mono-8bit-short-stereo-R.wav
+145 = .\p4ken\wav\door\gate-joint-fadein-L.wav
+
 ; 連絡ブザー
-180 = .\p4ken\wav\buzzer\conductor\dc-down12db-span-48kHz.wav
+180 = .\p4ken\wav\buzzer\conductor\dc-down12db-dep-late.wav
 181 = .\p4ken\wav\buzzer\conductor\dc-down12db-span-48kHz.wav
