--- a/vehicle-sj.ini
+++ b/vehicle-sj.ini
@@ -6,3 +6,4 @@ Sound = sound\sound.ini
 MotorNoise = motornoise\motornoise.ini
 Panel = panel\panel.ini
 Ats = ats\p4ken\x86\DetailSwitcher.dll
+; Ats = ats\CT\CONDUCTOR_200624\dll_x86\CONDUCTOR.dll
