--- a/parameters/parameters.ini
+++ b/parameters/parameters.ini
@@ -14,8 +14,8 @@ Power = 3 ;定速
 Neutral = 2 ;抑速
 
 [Dynamics]
-MotorcarWeight = 33267 ;公式緒元
-TrailerWeight = 30725 ;公式緒元
+MotorcarWeight = 33267 ;公式諸元
+TrailerWeight = 30725 ;公式諸元
 MotorcarCount = 6
 TrailerCount = 4
 
