--- a/panel/panel.ini
+++ b/panel/panel.ini
@@ -2,14 +2,13 @@ BveTs Instrument Panel 2.00
 
 [This]
 ; Resolution = 500 ; ピクセル調整用
-Resolution = 2000
+Resolution = 4000
 Left = 0
-Right = 2000
-Top = -500
-Bottom = 1250
-Center = 1000, 600
-; Center = 500, 1000
-Origin = 1000, 500
+Right = 4000
+Top = -1000
+Bottom = 2500
+Center = 2000, 1200
+Origin = 2000, 1000
 
 #
 # 非常ブレーキノッチ
@@ -52,8 +51,8 @@ Layer = 4
 # 速度
 #
 [PilotLamp]
-DaytimeImage = meter\speed_base_trim_lanczos.png
-Location = 350, 830
+DaytimeImage = meter\speed_base_trim_lanczos_2x.png
+Location = 700, 1660
 Subject = true
 Layer = 4
 [Needle]
@@ -93,8 +92,8 @@ Layer = 8
 #
 [DigitalGauge]
 Color = 51606B
-Radius = 140
-Location = 330, 965
+Radius = 280
+Location = 660, 1930
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -103,8 +102,8 @@ Subject = true
 Layer = 2
 [DigitalGauge]
 Color = 51606B
-Radius = 140
-Location = 510, 965
+Radius = 280
+Location = 1020, 1930
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -122,26 +121,38 @@ Subject = ats151
 Interval = 128
 Layer = 3
 
-[DigitalNumber]
-DaytimeImage = debug\P電源_xn.png
-Location = 990, 750
+[PilotLamp]
+DaytimeImage = ats\P電源_lanczos_2x.png
+Location = 1980, 1500
+Subject = true
+Layer = 3
+[PilotLamp]
+DaytimeImage = ats\P電源点灯_lanczos_2x.png
+Location = 1980, 1500
 Subject = ats2
-Interval = 128
-Layer = 3
+Layer = 4
 
-[DigitalNumber]
-DaytimeImage = debug\パターン接近_xn.png
-Location = 1040, 750
+[PilotLamp]
+DaytimeImage = ats\パターン接近_lanczos_2x.png
+Location = 2080, 1500
+Subject = true
+Layer = 3
+[PilotLamp]
+DaytimeImage = ats\パターン接近点灯_lanczos_2x.png
+Location = 2080, 1500
 Subject = ats3
-Interval = 128
-Layer = 3
+Layer = 4
 
-[DigitalNumber]
-DaytimeImage = debug\常用ブレーキ_xn.png
-Location = 1090, 750
-Subject = ats5
-Interval = 128
+[PilotLamp]
+DaytimeImage = ats\ブレーキ動作_lanczos_2x.png
+Location = 2180, 1500
+Subject = true
 Layer = 3
+[PilotLamp]
+DaytimeImage = ats\ブレーキ動作点灯_lanczos_2x.png
+Location = 2180, 1500
+Subject = ats5
+Layer = 4
 [DigitalNumber]
 DaytimeImage = debug\埼京マスク_xn.bmp
 Location = 1090, 750
@@ -150,12 +161,26 @@ Interval = 128
 Layer = 4
 TransparentColor = 000000
 
-[DigitalNumber]
-DaytimeImage = debug\非常ブレーキ_xn.png
-Location = 1140, 750
-Subject = ats8
-Interval = 128
+[PilotLamp]
+DaytimeImage = ats\非常ブレーキ_lanczos_2x.png
+Location = 2280, 1500
+Subject = true
 Layer = 3
+[PilotLamp]
+DaytimeImage = ats\非常ブレーキ点灯_lanczos_2x.png
+Location = 2280, 1500
+Subject = ats8 ; JRのみ、相鉄が競合
+Layer = 4
+[PilotLamp]
+DaytimeImage = ats\非常ブレーキ_lanczos_2x.png
+Location = 2280, 1500
+Subject = ats244
+Layer = 5
+[PilotLamp]
+DaytimeImage = ats\非常ブレーキ点灯_lanczos_2x.png
+Location = 2280, 1500
+Subject = ats1 ; 相鉄のみ、競合なし
+Layer = 6
 [DigitalNumber]
 DaytimeImage = debug\埼京マスク_xn.bmp
 Location = 1140, 750
@@ -301,10 +326,10 @@ TransparentColor = 000000
 # 最高速度ヒント
 #
 [DigitalNumber]
-DaytimeImage = tims\max_readable_lanczos.png
-Location = 970, 915
+DaytimeImage = tims\max_readable_lanczos_2x.png
+Location = 1940, 1830
 Subject = ats246
-Interval = 28
+Interval = 56
 Layer = 6
 
 #
@@ -512,21 +537,21 @@ Subject = true
 Layer = 4
 
 [PilotLamp]
-DaytimeImage = tims\routebase_lanczos.png
-Location = 940, 1070
+DaytimeImage = tims\routebase_lanczos_2x.png
+Location = 1880, 2140
 Subject = true
 Layer = 4
 [DigitalNumber]
-DaytimeImage = tims\route_company_lanczos.png
-Location = 1040, 1070
+DaytimeImage = tims\route_company_lanczos_2x.png
+Location = 2080, 2140
 Subject = ats246
-Interval = 24
+Interval = 48
 Layer = 5
 [DigitalNumber]
-DaytimeImage = tims\route_force_lanczos.png
-Location = 1340, 1070
+DaytimeImage = tims\route_force_lanczos_2x.png
+Location = 2680, 2140
 Subject = true
-Interval = 24
+Interval = 48
 Layer = 5
 
 #
@@ -534,8 +559,8 @@ Layer = 5
 #
 [DigitalGauge]
 Color = 364048
-Radius = 45
-Location = 980, 1000
+Radius = 90
+Location = 1960, 2000
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -544,8 +569,8 @@ Subject = true
 Layer = 3
 [DigitalGauge]
 Color = 364048
-Radius = 45
-Location = 1070, 1000
+Radius = 90
+Location = 2140, 2000
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -554,8 +579,8 @@ Subject = true
 Layer = 3
 [DigitalGauge]
 Color = 364048
-Radius = 45
-Location = 1160, 1000
+Radius = 90
+Location = 2320, 2000
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -564,8 +589,8 @@ Subject = true
 Layer = 3
 [DigitalGauge]
 Color = 364048
-Radius = 45
-Location = 1250, 1000
+Radius = 90
+Location = 2500, 2000
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -574,8 +599,8 @@ Subject = true
 Layer = 3
 [DigitalGauge]
 Color = 364048
-Radius = 45
-Location = 1340, 1000
+Radius = 90
+Location = 2680, 2000
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -584,8 +609,8 @@ Subject = true
 Layer = 3
 [DigitalGauge]
 Color = 364048
-Radius = 45
-Location = 1430, 1000
+Radius = 90
+Location = 2860, 2000
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -594,8 +619,8 @@ Subject = true
 Layer = 3
 [DigitalGauge]
 Color = 364048
-Radius = 45
-Location = 1520, 1000
+Radius = 90
+Location = 3040, 2000
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -604,8 +629,8 @@ Subject = true
 Layer = 3
 [DigitalGauge]
 Color = 364048
-Radius = 45
-Location = 1610, 1000
+Radius = 90
+Location = 3220, 2000
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -614,8 +639,8 @@ Subject = true
 Layer = 3
 [DigitalGauge]
 Color = 364048
-Radius = 45
-Location = 1680, 1000
+Radius = 90
+Location = 3360, 2000
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -628,8 +653,8 @@ Layer = 3
 #
 [DigitalGauge]
 Color = 51606B
-Radius = 190
-Location = 1100, 920
+Radius = 380
+Location = 2200, 1840
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -638,8 +663,8 @@ Subject = true
 Layer = 2
 [DigitalGauge]
 Color = 51606B
-Radius = 190
-Location = 1440, 920
+Radius = 380
+Location = 2880, 1840
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
@@ -648,8 +673,8 @@ Subject = true
 Layer = 2
 [DigitalGauge]
 Color = 51606B
-Radius = 190
-Location = 1560, 920
+Radius = 380
+Location = 3120, 1840
 InitialAngle = -180
 LastAngle = 180
 Minimum = 1
