ズーム率・物理灯調整

--- a/panel/panel.ini
+++ b/panel/panel.ini
@@ -1,31 +1,41 @@
 BveTs Instrument Panel 2.00
 
 [This]
-Resolution = 2000 ; 拡大調整用
-; Resolution = 4000
-Left = 100
-Right = 4100
+; Resolution = 2000 ; 拡大調整用
+Resolution = 4500
+Left = 150
+Right = 4050
 Top = -1000
 Bottom = 2500
-; Center = 2100, 1200
-Center = 1000, 1800 ; 拡大調整用
+Center = 2100, 1200
+; Center = 1000, 1800 ; 拡大調整用
 Origin = 2100, 1000
 
 #
 # 知らせ灯
 #
 [PilotLamp]
-DaytimeImage = lamp\知らせ灯_nearest_2x_残渣.bmp
-Location = 1500, 1700
+DaytimeImage = lamp\知らせ灯_nearest_2x_残渣_180r.bmp
+Location = 1500, 1940
 Subject = true
 Layer = 3
 TransparentColor = FFFFFF
 [PilotLamp]
-DaytimeImage = lamp\知らせ灯点灯_nearest_2x_残渣.bmp
-Location = 1500, 1700
+DaytimeImage = lamp\知らせ灯点灯_nearest_2x_残渣_180r.bmp
+Location = 1500, 1940
 Subject = ats151
 Layer = 4
 TransparentColor = FFFFFF
+[DigitalGauge]
+Color = 364048
+Radius = 90
+Location = 1560, 2000
+InitialAngle = -180
+LastAngle = 180
+Minimum = 1
+Maximum = 60
+Subject = true
+Layer = 2
 
 #
 # EBリセット
@@ -33,25 +43,25 @@ TransparentColor = FFFFFF
 [PilotLamp]
 DaytimeImage = lamp\EB_lanczos_2x.png
 NighttimeImage = lamp\EB_N_lanczos_2x.png
-Location = 3700, 2000
+Location = 3700, 1950
 Subject = true
 Layer = 3
 [PilotLamp]
 DaytimeImage = lamp\EB点灯_lanczos_2x.png
 NighttimeImage = lamp\EB点灯_N_lanczos_2x.png
-Location = 3700, 2000
+Location = 3700, 1950
 Subject = ats8 ; 相鉄のみ、JRが競合
 Layer = 4
 [PilotLamp]
 DaytimeImage = lamp\EB_lanczos_2x.png
 NighttimeImage = lamp\EB_N_lanczos_2x.png
-Location = 3700, 2000
+Location = 3700, 1950
 Subject = ats245
 Layer = 5
 [PilotLamp]
 DaytimeImage = lamp\EB点灯_lanczos_2x.png
 NighttimeImage = lamp\EB点灯_N_lanczos_2x.png
-Location = 3700, 2000
+Location = 3700, 1950
 Subject = ats40
 Layer = 6
 
@@ -165,107 +175,108 @@ Layer = 2
 #
 # 保安装置
 #
-[PilotLamp]
-DaytimeImage = ats\定速_lanczos_2x.png
-Location = 1880, 1500
-Subject = true
-Layer = 3
-[PilotLamp]
-DaytimeImage = ats\定速点灯_lanczos_2x.png
-Location = 1880, 1500
-Subject = ats90
-Layer = 4
-[PilotLamp]
-DaytimeImage = ats\定速点灯_lanczos_2x.png
-Location = 1880, 1500
-Subject = csc ; 55km/h未満用
-Layer = 4
 
 [PilotLamp]
 DaytimeImage = ats\P電源_lanczos_2x.png
-Location = 2080, 1500
+Location = 1880, 1500
 Subject = true
 Layer = 3
 [PilotLamp]
 DaytimeImage = ats\P電源点灯_lanczos_2x.png
-Location = 2080, 1500
+Location = 1880, 1500
 Subject = ats2
 Layer = 4
 
 [PilotLamp]
 DaytimeImage = ats\パターン接近_lanczos_2x.png
-Location = 2180, 1500
+Location = 1980, 1500
 Subject = true
 Layer = 3
 [PilotLamp]
 DaytimeImage = ats\パターン接近点灯_lanczos_2x.png
-Location = 2180, 1500
+Location = 1980, 1500
 Subject = ats3
 Layer = 4
 
 [PilotLamp]
 DaytimeImage = ats\ブレーキ動作_lanczos_2x.png
-Location = 2280, 1500
+Location = 2080, 1500
 Subject = true
 Layer = 3
 [PilotLamp]
 DaytimeImage = ats\ブレーキ動作点灯_lanczos_2x.png
-Location = 2280, 1500
+Location = 2080, 1500
 Subject = ats5
 Layer = 4
 
 [PilotLamp]
 DaytimeImage = ats\非常ブレーキ_lanczos_2x.png
-Location = 2380, 1500
+Location = 2180, 1500
 Subject = true
 Layer = 3
 [PilotLamp]
 DaytimeImage = ats\非常ブレーキ点灯_lanczos_2x.png
-Location = 2380, 1500
+Location = 2180, 1500
 Subject = ats8 ; JRのみ、相鉄が競合
 Layer = 4
 [PilotLamp]
 DaytimeImage = ats\非常ブレーキ_lanczos_2x.png
-Location = 2380, 1500
+Location = 2180, 1500
 Subject = ats244
 Layer = 5
 [PilotLamp]
 DaytimeImage = ats\非常ブレーキ点灯_lanczos_2x.png
-Location = 2380, 1500
+Location = 2180, 1500
 Subject = ats1 ; 相鉄のみ、競合なし
 Layer = 6
 
 [PilotLamp]
 DaytimeImage = ats\ブレーキ解放_lanczos_2x.png
-Location = 2480, 1500
+Location = 2280, 1500
 Subject = true
 Layer = 3
 [PilotLamp]
 DaytimeImage = ats\ブレーキ解放点灯_lanczos_2x.png
-Location = 2480, 1500
+Location = 2280, 1500
 Subject = ats4 ; JRのみ、競合なし
 Layer = 4
 
 [PilotLamp]
 DaytimeImage = ats\ATS-P_lanczos_2x.png
-Location = 2580, 1500
+Location = 2380, 1500
 Subject = true
 Layer = 3
 [PilotLamp]
 DaytimeImage = ats\ATS-P点灯_lanczos_2x.png
-Location = 2580, 1500
+Location = 2380, 1500
 Subject = ats6
 Layer = 4
 
 [PilotLamp]
 DaytimeImage = ats\故障_lanczos_2x.png
-Location = 2680, 1500
+Location = 2480, 1500
 Subject = true
 Layer = 3
 [PilotLamp]
 DaytimeImage = ats\故障点灯_lanczos_2x.png
-Location = 2680, 1500
+Location = 2480, 1500
 Subject = ats7
+Layer = 4
+
+[PilotLamp]
+DaytimeImage = ats\定速_lanczos_2x.png
+Location = 2580, 1500
+Subject = true
+Layer = 3
+[PilotLamp]
+DaytimeImage = ats\定速点灯_lanczos_2x.png
+Location = 2580, 1500
+Subject = ats90
+Layer = 4
+[PilotLamp]
+DaytimeImage = ats\定速点灯_lanczos_2x.png
+Location = 2580, 1500
+Subject = csc ; 55km/h未満用
 Layer = 4
 
 [PilotLamp]
@@ -656,3 +667,17 @@ Minimum = 1
 Maximum = 60
 Subject = true
 Layer = 2
+
+#
+# 全体ベース
+#
+; [DigitalGauge]
+; Color = 404040
+; Radius = 4000
+; Location = 1000, 5500
+; InitialAngle = -180
+; LastAngle = 180
+; Minimum = 1
+; Maximum = 60
+; Subject = true
+; Layer = 1
