知らせ灯の透過をなくす

--- a/panel/panel.ini
+++ b/panel/panel.ini
@@ -15,17 +15,15 @@ Origin = 2100, 1000
 # 知らせ灯
 #
 [PilotLamp]
-DaytimeImage = lamp\知らせ灯_nearest_2x_残渣_180r.bmp
-Location = 1500, 1940
+DaytimeImage = lamp\知らせ灯_lanczos_2x.png
+Location = 1495, 1935
 Subject = true
 Layer = 3
-TransparentColor = FFFFFF
 [PilotLamp]
-DaytimeImage = lamp\知らせ灯点灯_nearest_2x_残渣_180r.bmp
-Location = 1500, 1940
+DaytimeImage = lamp\知らせ灯点灯_lanczos_2x.png
+Location = 1495, 1935
 Subject = ats151
 Layer = 4
-TransparentColor = FFFFFF
 [DigitalGauge]
 Color = 364048
 Radius = 90
