横長ウィンドウ対応

--- a/panel/panel.ini
+++ b/panel/panel.ini
@@ -3,13 +3,13 @@ BveTs Instrument Panel 2.00
 [This]
 ; Resolution = 2000 ; 拡大調整用
 Resolution = 4500
-Left = 150
-Right = 4050
-Top = -1000
-Bottom = 2500
+Left = -3850 ;-=1000
+Right = 6050 ;-=1000
+Top = 0
+Bottom = 2300
 Center = 2100, 1200
 ; Center = 1000, 1800 ; 拡大調整用
-Origin = 2100, 1000
+Origin = 2100, 800
 
 #
 # 知らせ灯
@@ -384,71 +384,71 @@ Layer = 4
 
 [PilotLamp]
 DaytimeImage = tims_2x\閉x9_lanczos_2x.png
-Location = 2165, 1915
+Location = 2165, 1920
 Subject = true
 Layer = 4
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 2165, 1915
+Location = 2165, 1920
 Subject = ats160
 Layer = 5
 
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 2280, 1915
+Location = 2280, 1920
 Subject = ats161
 Layer = 6
 
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 2395, 1915
+Location = 2395, 1920
 Subject = ats162
 Layer = 7
 
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 2510, 1915
+Location = 2510, 1920
 Subject = ats163
 Layer = 8
 
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 2625, 1915
+Location = 2625, 1920
 Subject = ats164
 Layer = 9
 
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 2740, 1915
+Location = 2740, 1920
 Subject = ats165
 Layer = 10
 
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 2855, 1915
+Location = 2855, 1920
 Subject = ats166
 Layer = 11
 
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 2970, 1915
+Location = 2970, 1920
 Subject = ats167
 Layer = 12
 
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 3085, 1915
+Location = 3085, 1920
 Subject = ats168
 Layer = 13
 
 [PilotLamp]
 DaytimeImage = tims_2x\閉_lanczos_2x.png
-Location = 3200, 1915
+Location = 3200, 1920
 Subject = true
 Layer = 14
 [PilotLamp]
 DaytimeImage = tims_2x\開_lanczos_2x.png
-Location = 3200, 1915
+Location = 3200, 1920
 Subject = ats169
 Layer = 15
 
