分岐器通過音を追加

--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -9,6 +9,10 @@
 [Motor]
 0 = .\p4ken\wav\motor\非同期8_反転して両端フェード.wav
 
+[Joint]
+0 = .\p4ken\wav\joint\1-branch-pitch2.wav
+1 = .\p4ken\wav\joint\1-merge-pitch2+6db.wav
+
 [Buzzer]
 Correct = .\p4ken\wav\buzzer\conductor\dc-down12db-overrun-short.wav
 
