--- a/sound/sound.ini
+++ b/sound/sound.ini
@@ -1,20 +1,20 @@
 ﻿BveTs Vehicle Sound 3.01
 
 [Run]
-0 = .\p4ken\wav\run\tsurumi2-fast+20db.wav
-2 = .\p4ken\wav\run\warihata1-trim+16db.wav
-3 = .\p4ken\wav\run\tsurumigawa2-fast-comp15db50%+12db.wav
-4 = .\p4ken\wav\run\kohoku1-trim+12db.wav
+0 = .\p4ken\wav\run\tsurumi2-fast+20db-12kHz-16bit.wav
+2 = .\p4ken\wav\run\warihata1-trim+16db-12kHz-16bit.wav
+3 = .\p4ken\wav\run\tsurumigawa2-fast-comp15db50per+12db-12kHz-8bit.wav
+4 = .\p4ken\wav\run\kohoku1-trim+12db-24kHz-8bit.wav
 
 [Motor]
-0 = .\p4ken\wav\motor\非同期8_反転して両端フェード.wav
+0 = .\p4ken\wav\motor\非同期9_22050Hz.wav
 
 [Joint]
-0 = .\p4ken\wav\joint\1-branch-pitch2.wav
-1 = .\p4ken\wav\joint\1-merge-pitch2+6db.wav
+0 = .\p4ken\wav\joint\1-branch-pitch6-12kHz-16bit.wav
+1 = .\p4ken\wav\joint\1-merge-pitch6+3db-12kHz-16bit.wav
 
 [Buzzer]
-Correct = .\p4ken\wav\buzzer\conductor\dc-down12db-overrun-short.wav
+Correct = .\p4ken\wav\buzzer\conductor\dc-down12db-overrun-short-24kHz.wav
 
 [Ats]
 ; 相鉄
@@ -32,10 +32,10 @@ Correct = .\p4ken\wav\buzzer\conductor\dc-down12db-overrun-short.wav
 21 = .\p4ken\wav\ann\hazawa\here-mono-12000Hz-16bit-up3db.wav
 
 ; ドア閉
-141 = .\p4ken\wav\door\close-trim-mono-8bit-short-stereo-L.wav
-143 = .\p4ken\wav\door\close-trim-mono-8bit-short-stereo-R.wav
-145 = .\p4ken\wav\door\gate-joint-fadein-L.wav
+141 = .\p4ken\wav\door\close-trim-mono-8bit-short-stereo-L-11025Hz.wav
+143 = .\p4ken\wav\door\close-trim-mono-8bit-short-stereo-R-11025Hz.wav
+145 = .\p4ken\wav\door\gate-joint-fadein-L-8bit-11025Hz.wav
 
 ; 連絡ブザー
-180 = .\p4ken\wav\buzzer\conductor\dc-down12db-dep-late.wav
+180 = .\p4ken\wav\buzzer\conductor\dc-down12db-dep-late-24kHz.wav
 181 = .\p4ken\wav\buzzer\conductor\dc-down12db-span-48kHz.wav
