--- a/parameters/parameters.ini
+++ b/parameters/parameters.ini
@@ -6,8 +6,11 @@ BrakeText = 切,B1,B2,B3,B4,B5,B6,B7,B8,非常
 PowerText = 切,P1,P2,P3,P4,P5
 
 [Ecb]
+; MaximumPressure = 440000 ;Bveデフォルト
 
 [AirSupplement]
+; MaximumPressure = 300000 ; 電制負担率
+ShoeFriction = 0.15
 
 [ConstantSpeedControl]
 Power = 3 ;定速
