--- a/parameters/parameters.ini
+++ b/parameters/parameters.ini
@@ -5,12 +5,12 @@ ReverserText = 後,切,前
 BrakeText = 切,B1,B2,B3,B4,B5,B6,B7,B8,非常
 PowerText = 切,P1,P2,P3,P4,P5
 
-[Ecb]
-; MaximumPressure = 440000 ;Bveデフォルト
-
 [AirSupplement]
-; MaximumPressure = 300000 ; 電制負担率
-ShoeFriction = 0.10
+ShoeFriction = 0.18
+
+[Brake]
+PistonArea = 0.611
+ShoeFriction = 0.26, 0.01, 0.025
 
 [ConstantSpeedControl]
 Power = 3 ;定速
