全電気ブレーキの設定漏れ修正

--- a/parameters/parameters.ini
+++ b/parameters/parameters.ini
@@ -5,12 +5,17 @@ ReverserText = 後,切,前
 BrakeText = 切,B1,B2,B3,B4,B5,B6,B7,B8,非常
 PowerText = 切,P1,P2,P3,P4,P5
 
+[MainCircuit]
+RegenerationLimit = 0 #全電気ブレーキ
+RegenerationStartLimit = 0 #全電気ブレーキ
+
 [AirSupplement]
-ShoeFriction = 0.18
+ShoeFriction = 0.18 #Excel
+RegenerationLimit = 0 #全電気ブレーキ
 
 [Brake]
-PistonArea = 0.611
-ShoeFriction = 0.26, 0.01, 0.025
+PistonArea = 0.611 #Excel
+ShoeFriction = 0.26, 0.01, 0.025 #デフォルト
 
 [ConstantSpeedControl]
 Power = 3 ;定速
@@ -21,6 +26,3 @@ MotorcarWeight = 33267 ;公式諸元
 TrailerWeight = 30725 ;公式諸元
 MotorcarCount = 6
 TrailerCount = 4
-
-[MainCircuit]
-RegenerationLimit = 0 ;全電気ブレーキ
