プラグインなし用のパネルファイルを保存

--- a/vehicle-main.ini
+++ b/vehicle-main.ini
@@ -4,4 +4,4 @@ Parameters = parameters\parameters.ini
 PerformanceCurve = performance\performance.ini
 Sound = sound\sound.ini
 MotorNoise = motornoise\motornoise.ini
-Panel = panel\panel.ini
+Panel = panel\panel_4_bc.ini
