--- a/vehicle-sj.ini
+++ b/vehicle-sj.ini
@@ -1,8 +1,9 @@
-BveTs Vehicle 1.00:UTF-8
+BveTs Vehicle 2.00:UTF-8
 
 Parameters = parameters\parameters.ini
 PerformanceCurve = performance\performance.ini
 Sound = sound\sound.ini
 MotorNoise = motornoise\motornoise.ini
 Panel = panel\panel.ini
-Ats = ats\p4ken\x86\DetailSwitcher.dll
+Ats32 = ats\p4ken\x86\DetailSwitcher.dll
+Ats64 = ats\p4ken\x86\DetailSwitcher_.dll
